nullaway_error_B8C18D2E-872A-4B4F-BC38-5290C5F73FD0.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/annotation/ConfigurationClass.java:226: error: [NullAway] unboxing of a @Nullable value
		if (attributes != null && (Boolean) attributes.get("proxyBeanMethods") && this.metadata.isFinal()) {
		                          ^
    (see http://t.uber.com/nullaway )
